# mva

./: .gitignore  README.md
.opencode/: opencode.dev-story-orchestrator.jsonc.example  opencode.review-orchestrator.jsonc.example
.opencode/agents/: vnpt-dev-story-orchestrator.md  vnpt-story-implementer.md
.opencode/commands/: bmad-create-data-architecture.md  bmad-create-ui-design-concept.md  bmad-vnpt-c-cpp.md  bmad-vnpt-dotnet.md  bmad-vnpt-java-springboot-custom.md  bmad-vnpt-mobile-flutter.md  bmad-vnpt-php.md  bmad-vnpt-security-api.md  bmad-vnpt-security-dotnet.md  bmad-vnpt-security-frontend-react.md  bmad-vnpt-security-mobile-react.md  bmad-vnpt-security-php.md  bmad-vnpt-security-python.md  bmad-vnpt-security.md  bmad-vnpt-web-angular.md  bmad-vnpt-web-vue.md  vnpt-dev-story-loop.md  vnpt-review-loop.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: Prompt_Generate requirements.txt  google-stitch-prompts.md  meeting-voice-assistant-architecture-v2.1-final.html  project-context.md  requirements.md  vibe prompt  vnpt-review-orchestrator.README.md
docs/implementation-artifacts/: 1-1-initialize-mobile-project-and-offline-architecture-baseline.md  1-2-implement-app-bootstrap-and-model-readiness-flow.md  1-3-add-nllb-translation-model-to-download-and-cache-lifecycle.md  1-4-pre-warm-stt-and-translation-models-before-first-use.md  1-5-establish-offline-only-configuration-and-security-baseline.md  4-1-build-meeting-screen-with-two-lane-layout.md  (+26 more)
mobile/: .eslintrc.js  .gitignore  App.tsx  README.md  app.json  babel.config.js  index.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile-clean/: App.tsx  app.json  jest.config.js  package-lock.json  package.json
mobile/android/app/src/main/cpp/: CMakeLists.txt  OfflineSpeakerDiarizationModule.cpp
scripts/: prepare_nllb_mobile.py
vnpt-bmad-custom/: AGENTS.md  README.md  install_vnpt_bmad_custom_all.py
vnpt-bmad-custom/bmad-vnpt-c-cpp/extras/opencode-skills/bmad-vnpt-c-cpp/skeleton/cmake-app/: CMakeLists.txt  vcpkg.json
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/: pyproject.toml
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/desktop_pyside6/: README.md
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/ml_pytorch/: README.md
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/src/app/: main.py
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/tests/: test_smoke.py
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/web_django/: README.md
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/web_fastapi/: pyproject.toml
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/web_fastapi/app/: main.py
vnpt-bmad-custom/bmad-vnpt-python/extras/opencode-skills/bmad-vnpt-python/skeleton/web_fastapi/app/api/: routes.py
(+592 files in other folders)
