[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-python-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest", "mypy"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
